# open-snell

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  go.mod  go.sum
.github/workflows/: docker.yml
cmd/snell-client/: main.go
cmd/snell-server/: main.go
components/aead/: cipher.go  stream.go
components/simple-obfs/: http.go  obfs.go  tls.go
components/simple-obfs/http/: client.go  server.go
components/simple-obfs/tls/: client.go  common.go  server.go
components/snell/: cipher.go  client.go  common.go  fastopen.go  fastopen_linux.go  pool.go  server.go
components/socks5/: protocol.go  server.go
components/utils/: relay.go
components/utils/pool/: alloc.go  pool.go
constants/: version.go
docker/: package.sh
hooks/: build
snell-server/: CMakeLists.txt
snell-server/src/: aes_gcm_cipher.cc  aes_gcm_cipher.hh  chacha20_poly1305_ietf_cipher.cc  chacha20_poly1305_ietf_cipher.hh  cipher.hh  crypto_context.hh  server.cc  session.cc  session.hh
snell-server/src/crypto/: chacha20_poly1305_ietf_cipher.cc  cipher.hh  crypto_context.cc
snell-server/src/obfs/: http.cc  obfs.hh  tls.cc  tls.hh
snell_server/: CMakeLists.txt
snell_server/src/: ini.cc  ini.hh  server.cc  session.cc  session.hh  stream.cc  stream.hh
snell_server/src/async_utils/: async_event.hh  async_latch.hh
snell_server/src/crypto/: aes_gcm_cipher.cc  chacha20_poly1305_ietf_cipher.cc  cipher.hh  crypto_context.cc  crypto_context.hh
snell_server/src/obfs/: http.cc  http.hh  tls.cc
